--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 </div>
 <!-- footer  -->
 <div class="footer">
- <a href="index.html">Homepage|</a>
- <a href="Table.html">Table page|</a>
+ <a href="index.html">Homepage</a>
+ <a href="Table.html">Table page</a>
  <a href="Form.html">Form page</a><br>
 </div>
 </body>
